fix(search): fix broken layout on tablet

--- a/packages/hcl-sdk-web-ui/src/components/ui-kits/hcl-sdk-switch-view-mode/hcl-sdk-switch-view-mode.scss
+++ b/packages/hcl-sdk-web-ui/src/components/ui-kits/hcl-sdk-switch-view-mode/hcl-sdk-switch-view-mode.scss
@@ -1,30 +1,44 @@
 :host {
-  display: flex;
-  border: 1px solid #ddd;
-  border-radius: 32px;
-  padding: 2px;
-  cursor: pointer;
-
-  .mode-item {
+  .hclsdk-switch-view-mode {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 4px 12px;
-    color: #5c5c5c;
+    border: 1px solid #ddd;
+    border-radius: 32px;
+    padding: 2px;
+    cursor: pointer;
 
-    span {
-      margin-left: 5px;
-      font-weight: 300;
-    }
+    .mode-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 4px 12px;
+      color: #5c5c5c;
 
-    &.active {
-      background: var(--hcl-color-primary);
-      color: white;
-      border-radius: 32px;
+      span {
+        margin-left: 5px;
+        font-weight: 300;
+      }
+
+      &.active {
+        background: var(--hcl-color-primary);
+        color: white;
+        border-radius: 32px;
+        span {
+          color: white;
+        }
+      }
+      &__map-icon {
+        width: 0.9em;
+        height: 0.9em;
+      }
     }
-    &__map-icon {
-      width: 0.9em;
-      height: 0.9em;
+  }
+
+
+  .size-tablet {
+    .hclsdk-switch-view-mode {
+      .mode-item > span {
+        display: none;
+      }
     }
   }
 }
